--- a/app/views/onsens/index.html.erb
+++ b/app/views/onsens/index.html.erb
@@ -10,4 +10,7 @@
   </div>
 
   <div data-controller="map" data-map-target="container" data-map-onsens="<%= h @onsens.to_json(only: [:id, :name, :geo_lat, :geo_lng]) %>" style="width: 100%; height: 500px;"></div>
+  <% @onsens.each do |onsen| %>
+    <%= render partial: "spot_card", locals: { onsen: onsen } %>
+  <% end %>
 </div>
