--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,11 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-gray-50 min-h-screen flex flex-col">
+    <%= render 'layouts/navbar' %>
+    <main class="flex-1">
       <%= yield %>
     </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
