--- a/app/views/admin/onsens/_onsen.html.erb
+++ b/app/views/admin/onsens/_onsen.html.erb
@@ -1,22 +1,12 @@
-<div id="<%= dom_id onsen %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1">Name:</strong>
-    <%= onsen.name %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Geo lat:</strong>
-    <%= onsen.geo_lat %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Geo lng:</strong>
-    <%= onsen.geo_lng %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Description:</strong>
-    <%= onsen.description %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Tags:</strong>
-    <%= onsen.tags %>
-  </div>
-</div>
+<dl class="grid grid-cols-1 sm:grid-cols-2 gap-x-4 gap-y-2 text-sm text-gray-700 break-words">
+  <dt class="font-semibold">名称</dt>
+  <dd><%= onsen.name %></dd>
+  <dt class="font-semibold">緯度</dt>
+  <dd><%= onsen.geo_lat %></dd>
+  <dt class="font-semibold">経度</dt>
+  <dd><%= onsen.geo_lng %></dd>
+  <dt class="font-semibold">説明</dt>
+  <dd><%= onsen.description %></dd>
+  <dt class="font-semibold">タグ</dt>
+  <dd><%= onsen.tags %></dd>
+</dl>
